# Kart-Public

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  SRB2.cbp  add_nix_local_ports.patch  appveyor.yml  build.sh  default.nix  emscripten.nix  flake.nix  readme.txt  shell.nix
.circleci/: config.yml
.github/workflows/: static.yml
assets/: .gitignore  CMakeLists.txt  HISTORY.txt  README.txt
cmake/Modules/: FindDiscordRPC.cmake  FindGME.cmake  FindSDL2.cmake
debian-template/: control  rules
debian-template/source/: options
deployer/travis/: deployer_defaults.sh
doc/: Holepunch-Protocol.txt
libs/: DLL-README.txt  discord-rpc.props
libs/SDL2/i686-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
libs/SDL2/i686-w64-mingw32/lib/pkgconfig/: sdl2.pc
libs/SDL2/x86_64-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
libs/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake
libs/SDL2/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
libs/libpng-src/projects/visualc10/: libpng.vcxproj
libs/zlib/projects/visualc10/: zlib.vcxproj
src/: CMakeLists.txt  Makefile  Makefile.cfg  am_map.c  am_map.h  apng.c  apng.h  b_bot.c  b_bot.h  byteptr.h  command.c  command.h  comptime.c  config.h.in  console.c  console.h  d_async.c  d_async.h  d_clisrv.c  d_clisrv.h  d_event.h  d_main.c  d_main.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  d_player.h  d_think.h  d_ticcmd.h  d_vote.c  d_vote.h  dehacked.c  dehacked.h  discord.c  discord.h  discord_pass.h  doomdata.h  (+163 more)
src/android/: i_main.c  i_system.c  i_video.c
src/blua/: Makefile.cfg  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.c  lopcodes.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  ltable.c  ltable.h  ltablib.c  ltm.c  ltm.h  (+9 more)
src/djgppdos/: i_system.c  i_video.c  vid_vesa.c
src/dummy/: i_system.c  i_video.c
src/hardware/: hw3dsdrv.h  hw3sound.c  hw3sound.h  hw_bsp.c  hw_cache.c  hw_clip.c  hw_clip.h  hw_data.h  hw_defs.h  hw_dll.h  hw_draw.c  hw_drv.h  hw_glide.h  hw_glob.h  hw_light.c  hw_light.h  hw_main.c  hw_main.h  hw_md2.c  hw_md2.h  hw_md2load.c  hw_md2load.h  hw_md3load.c  hw_md3load.h  hw_model.c  hw_model.h  hw_trick.c  hws_data.h  u_list.c  u_list.h
src/hardware/r_minigl/: r_minigl.c
src/hardware/r_opengl/: ogl_win.c  r_opengl-vc10.vcxproj  r_opengl.c  r_opengl.h  r_vbo.h
src/hardware/s_ds3d/: s_ds3d.c
src/hardware/s_fmod/: s_fmod.c
src/hardware/s_openal/: s_openal-vc10.vcxproj  s_openal.c
src/nds/: i_video.c  r_nds3d.c
src/sdl/: CMakeLists.txt  IMG_xpm.c  MakeNIX.cfg  Makefile.cfg  SDL_icon.xpm  Srb2SDL-vc10.vcxproj  Srb2SDL-vc10.vcxproj.filters  Srb2SDL-vc9.vcproj  dosstr.c  endtxt.c  endtxt.h  hwsym_sdl.c  hwsym_sdl.h  i_cdmus.c  i_main.c  i_net.c  i_system.c  i_threads.c  i_ttf.c  i_ttf.h  i_video.c  mixer_sound.c  ogl_sdl.c  ogl_sdl.h  sdl_sound.c  sdlmain.h
src/sdl/SDL_main/: SDL_dummy_main.c  SDL_openxdk_main.c  SDL_windows_main.c
src/sdl/macosx/: Srb2mac.icns  mac_alert.c  mac_alert.h  mac_resources.c  mac_resources.h
src/sdl/macosx/Srb2mac.xcodeproj/: project.pbxproj
src/sdl12/: Srb2SDL-vc10.vcxproj  Srb2SDL-vc9.vcproj  hwsym_sdl.c  i_cdmus.c  i_main.c  i_system.c  i_ttf.c  i_video.c  mixer_sound.c  sdl_sound.c
src/sdl12/SDL_main/: SDL_win32_main.c
src/sdl12/SRB2DC/: i_udp.c
src/sdl12/macosx/Srb2mac.pbproj/: project.pbxproj
src/sdl12/macosx/Srb2mac.xcodeproj/: project.pbxproj
src/web/: CMakeLists.txt  default.nix  elm-srcs.nix  elm.json  index.html  package-lock.json  package.json  tailwind.config.js  webpack.config.js
src/web/elm/: Addon.elm  CommandHandler.elm  Commands.elm  Game.elm  Main.elm  Model.elm  Msg.elm  Status.elm
src/web/elm/Commands/: ListWads.elm
src/web/elm/Views/: AddonPicker.elm  Button.elm  Help.elm  KeyboardCombo.elm  Modal.elm
src/web/js/: index.js  kart.js  polyfillReadableStreamAsyncIterator.js
src/win32/: CMakeLists.txt  Makefile.cfg  Srb2win-vc10.vcxproj  Srb2win-vc10.vcxproj.filters  Srb2win-vc9.vcproj  Srb2win.rc  win_dbg.c  win_dll.c  win_dll.h  win_main.c  win_net.c  win_sys.c  win_vid.c
src/win32ce/: win_dbg.c  win_dll.c  win_main.c  win_sys.c  win_vid.c
windows-installer/: BuildInstaller.bat  README.txt  VersionFileName.txt
windows-installer/sfx/: config-installer.txt  config-patch.txt  config-uninstaller.txt
windows-installer/staging/: ! SRB2KART INSTALL INSTRUCTIONS !.txt
windows-installer/staging/new-install/: old-install-list.txt  staging.bat
windows-installer/uninstaller/: uninstall.bat
